<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_linuxcomp_social"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.linuxcomp.apps.hstester.LinuxComp_Social">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/our_social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" />

        <TextView
            android:text="@string/link_lc_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLink_lc_site" />

        <TextView
            android:text="@string/link_lc_vk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLink_vk" />

        <TextView
            android:text="@string/link_lc_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLink_fb" />

        <TextView
            android:text="@string/link_lc_tw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLink_tw" />

        <TextView
            android:text="@string/link_lc_gp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLink_gp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dip" />

        <TextView
            android:text="@string/usefull_links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView16" />

        <TextView
            android:text="@string/link_hs_specs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLink_hss" />

        <TextView
            android:text="@string/link_testing_remote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLink_trb" />

        <TextView
            android:text="@string/link_keyevent_voice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLink_vak" />

        <TextView
            android:text="@string/link_remap_remote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLink_rhb" />

        <TextView
            android:text="@string/link_keytest_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLink_kta" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tr_trs_trrs_pins"
            android:id="@+id/imageView" />
    </LinearLayout>

</RelativeLayout>
